tests/baselines/reference/looseThisTypeInFunctions.errors.txt
tests/cases/conformance/types/thisType/looseThisTypeInFunctions.ts(14,1): error TS2322: Type '(this: C, m: number) => number' is not assignable to type '(m: number) => number'.
  Types of parameters 'this' and 'this' are incompatible.
    Type 'void' is not assignable to type 'C'.


==== tests/cases/conformance/types/thisType/looseThisTypeInFunctions.ts (1 errors) ====
    class C {
        n: number;
        explicitThis(this: this, m: number): number {
            return this.n + m;
        }
        implicitThis(m: number): number {
            return this.n + m;
        }
        explicitVoid(this: void, m: number): number {
            return m + 1;
        }
    }
    let c = new C();
    c.explicitVoid = c.explicitThis; // error, 'void' is missing everything
    ~~~~~~~~~~~~~~
!!! error TS2322: Type '(this: C, m: number) => number' is not assignable to type '(m: number) => number'.
!!! error TS2322:   Types of parameters 'this' and 'this' are incompatible.
!!! error TS2322:     Type 'void' is not assignable to type 'C'.
    declare let o: { 
    	implicitThis(m: number): number, 
    };
    c.explicitVoid = c.implicitThis // ok, implicitThis(this:any)
    o.implicitThis = c.implicitThis; // ok, implicitThis(this:any)
    o.implicitThis = c.explicitThis; // ok, implicitThis(this:any) is assignable to explicitThis(this: this)
    